WebCore:

2009-01-27  Mads Ager  <ager@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23300
        Follow Firefox in throwing exceptions when using selection
        functions on HTMLInputElements that cannot have selection.

        This requires custom setSelectionRange, setSelectionStart and
        setSelectionEnd implementations, but it gets rid of the custom
        getOwnPropertySlot.

        * bindings/js/JSHTMLInputElementCustom.cpp:
        (WebCore::JSHTMLInputElement::selectionStart):
        (WebCore::JSHTMLInputElement::selectionEnd):
        (WebCore::JSHTMLInputElement::setSelectionRange):
        * html/HTMLInputElement.idl:

LayoutTests:

2009-01-27  Mads Ager  <ager@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23300
        Update test of selection functions on HTMLInputElements to expect
        the selection functions to throw exceptions when used on buttons.
        This is consistent with the Firefox behavior.

        * fast/forms/selection-functions-expected.txt:
        * fast/forms/selection-functions.html:

Canonical link: https://commits.webkit.org/32481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40293 268f45cc-cd09-0410-ab3c-d52691b4dbfc